--- a/lyra/config/config.yaml
+++ b/lyra/config/config.yaml
@@ -2,7 +2,7 @@
 
 # Data paths
 data:
-  csv_path: "dataset.csv"
+  csv_path: "lyra/dataset.csv"
   train_ratio: 0.8
   val_ratio: 0.1
   test_ratio: 0.1
@@ -46,7 +46,7 @@ training:
 
 # Checkpointing
 checkpoint:
-  save_dir: "models/checkpoints"
+  save_dir: "lyra/models/checkpoints"
   save_best_only: false  # Save periodic checkpoints
   save_interval: 5  # Save checkpoint every N epochs
   monitor: "val_f1"  # Metric to monitor for best model
